--- a/materials/Day5/GPHY-491-591-Lab3.ipynb
+++ b/materials/Day5/GPHY-491-591-Lab3.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -288,7 +288,22 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2116301/1458159814.py:6: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "\n",
+      "import os\n",
+      "os.environ['USE_PYGEOS'] = '0'\n",
+      "import geopandas\n",
+      "\n",
+      "In a future release, GeoPandas will switch to using Shapely by default. If you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
+      "  import geopandas as gpd\n"
+     ]
+    }
+   ],
    "source": [
     "# Import Depedencies\n",
     "import os\n",
@@ -309,7 +324,7 @@
    "outputs": [],
    "source": [
     "# set up your file path\n",
-    "file_path = os.path.join('/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/')"
+    "file_path = os.path.join('/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/')"
    ]
   },
   {
@@ -397,16 +412,16 @@
     {
      "data": {
       "text/plain": [
-       "['/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-popdensity.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-crime.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-white.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-homeowner.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-latino.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-single_parent.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-black.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-diversity.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-asian.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day4/data/Lab4/socioeconomic/LA-medincome.csv']"
+       "['/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-popdensity.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-crime.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-white.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-homeowner.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-latino.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-single_parent.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-black.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-diversity.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-asian.csv',\n",
+       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-medincome.csv']"
       ]
      },
      "execution_count": 17,
@@ -441,7 +456,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2052831/2062887640.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2116301/2062887640.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -478,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -621,7 +636,7 @@
        "4              0.00            0.282              0.00       106078.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -646,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -655,12 +670,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2052831/869161722.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2116301/869161722.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  gdf_out.rename(columns={'Name':'NEIGHBORHOOD'}, inplace=True) # rename col\n",
-      "/tmp/ipykernel_2052831/869161722.py:6: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/tmp/ipykernel_2116301/869161722.py:6: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf_out.to_file(fn_out+'.shp', index = False) # save\n"
      ]
     }
@@ -683,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -814,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,17 +854,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Brightness temp done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make Brightness temp -- 2020-08-20 \n",
     "bright_temp(bt_fn, fn_out, radiance_mult, radiance_add, k1, k2)"
@@ -864,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -995,29 +1002,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2052831/1625411570.py:20: RuntimeWarning: divide by zero encountered in divide\n",
-      "  ndvi = np.nan_to_num((band5 - band4)/(band5 + band4))\n",
-      "/tmp/ipykernel_2052831/1625411570.py:20: RuntimeWarning: invalid value encountered in divide\n",
-      "  ndvi = np.nan_to_num((band5 - band4)/(band5 + band4))\n",
-      "/tmp/ipykernel_2052831/1625411570.py:21: RuntimeWarning: overflow encountered in cast\n",
-      "  ndvi = np.float32(ndvi) # reduce size\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NDVI done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Process the data\n",
     "ndvi(b4, b5, fn_out)"
@@ -1032,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1047,25 +1034,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2052831/1625411570.py:20: RuntimeWarning: invalid value encountered in divide\n",
-      "  ndvi = np.nan_to_num((band5 - band4)/(band5 + band4))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NDVI done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Process the data\n",
     "ndvi(b4, b5, fn_out)"
@@ -1080,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
