--- a/materials/Day5/GPHY-491-591-Lab3.ipynb
+++ b/materials/Day5/GPHY-491-591-Lab3.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,20 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this code\n",
     "x = 1\n",
@@ -68,20 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "84"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this code\n",
     "z = 7\n",
@@ -92,19 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "84\n",
-      "x 1\n",
-      "y 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this code\n",
     "z = 7\n",
@@ -126,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,21 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "84\n",
-      "588\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this code\n",
     "ans = my_func(x = z, y = c)\n",
@@ -164,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,17 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "588\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "z = 7\n",
     "c = 12\n",
@@ -220,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,30 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function my_new_func in module __main__:\n",
-      "\n",
-      "my_new_func(x, y)\n",
-      "    Function that squares the first value and then multiplies it by the second value. Returns an answer:\n",
-      "    \n",
-      "    ans = x**2 * y\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    x = number to be squared\n",
-      "    y = number to be multiplied.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this code\n",
     "help(my_new_func)"
@@ -286,24 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2116301/1458159814.py:6: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
-      "\n",
-      "import os\n",
-      "os.environ['USE_PYGEOS'] = '0'\n",
-      "import geopandas\n",
-      "\n",
-      "In a future release, GeoPandas will switch to using Shapely by default. If you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
-      "  import geopandas as gpd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Depedencies\n",
     "import os\n",
@@ -312,14 +228,14 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import rasterio \n",
-    "# from rasterstats import zonal_stats\n",
+    "from rasterstats import zonal_stats\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,31 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-popdensity.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-crime.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-white.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-homeowner.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-latino.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-single_parent.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-black.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-diversity.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-asian.csv',\n",
-       " '/home/group/earthsciences/gphy591/github/GPHY-491-591/materials/Day5/data/Lab3/socioeconomic/LA-medincome.csv']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use glob and the wildcard * to look at the files in se_dir\n",
     "glob(se_dir+'*')"
@@ -449,21 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2116301/2062887640.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_out.rename(columns={'Name':'NEIGHBORHOOD'}, inplace=True) # rename col\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make a DataFrame to Merge the Files \n",
     "df_out = neighborhoods[['Name']]\n",
@@ -472,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,154 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NEIGHBORHOOD</th>\n",
-       "      <th>POPULATION PER SQMI</th>\n",
-       "      <th>CRIME PER CAPITA</th>\n",
-       "      <th>CRIME TOTAL</th>\n",
-       "      <th>WHITE POPULATION</th>\n",
-       "      <th>HOMEOWNERS</th>\n",
-       "      <th>LATINO POPULATION</th>\n",
-       "      <th>SINGLE PARENTS</th>\n",
-       "      <th>BLACK POPULATION</th>\n",
-       "      <th>DIVERSITY INDEX</th>\n",
-       "      <th>ASIAN POPULATION</th>\n",
-       "      <th>MEDIAN INCOME</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Acton</td>\n",
-       "      <td>166.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.316</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>83983.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Adams-Normandie</td>\n",
-       "      <td>21848.0</td>\n",
-       "      <td>30.3</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.545</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>29606.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Adams-Normandie</td>\n",
-       "      <td>21848.0</td>\n",
-       "      <td>29606.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.545</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>29606.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Agoura Hills</td>\n",
-       "      <td>2495.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.304</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>117608.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Agua Dulce</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.282</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>106078.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      NEIGHBORHOOD  POPULATION PER SQMI  CRIME PER CAPITA  CRIME TOTAL  \\\n",
-       "0            Acton                166.0               0.0          0.0   \n",
-       "1  Adams-Normandie              21848.0              30.3         56.0   \n",
-       "2  Adams-Normandie              21848.0           29606.0          NaN   \n",
-       "3     Agoura Hills               2495.0               0.0          0.0   \n",
-       "4       Agua Dulce                 99.0               0.0          0.0   \n",
-       "\n",
-       "   WHITE POPULATION  HOMEOWNERS  LATINO POPULATION  SINGLE PARENTS  \\\n",
-       "0              0.82        0.88               0.12            0.09   \n",
-       "1              0.06        0.21               0.62            0.24   \n",
-       "2              0.06        0.21               0.62            0.24   \n",
-       "3              0.83        0.84               0.07            0.10   \n",
-       "4              0.84        0.87               0.11            0.05   \n",
-       "\n",
-       "   BLACK POPULATION  DIVERSITY INDEX  ASIAN POPULATION  MEDIAN INCOME  \n",
-       "0              0.01            0.316              0.02        83983.0  \n",
-       "1              0.25            0.545              0.05        29606.0  \n",
-       "2              0.25            0.545              0.05        29606.0  \n",
-       "3              0.01            0.304              0.06       117608.0  \n",
-       "4              0.00            0.282              0.00       106078.0  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check out df_out\n",
     "df_out.head()"
@@ -648,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -661,25 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2116301/869161722.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  gdf_out.rename(columns={'Name':'NEIGHBORHOOD'}, inplace=True) # rename col\n",
-      "/tmp/ipykernel_2116301/869161722.py:6: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  gdf_out.to_file(fn_out+'.shp', index = False) # save\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# write shape file\n",
     "gdf_out = neighborhoods[['Name','geometry']] # get name and geom\n",
@@ -732,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,19 +504,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up file paths\n",
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200414_20200423_01_T1/')\n",
     "bt_fn = os.path.join(data_in, 'LC08_L1TP_041036_20200414_20200423_01_T1_B10.TIF')\n",
-    "fn_out = os.path.join('./data/', 'TB_20200414.tif')"
+    "fn_out = os.path.join('./data/', 'BT_20200414.tif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,19 +529,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Brightness temp done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make Brightness temp -- 2020-04-14\n",
     "bright_temp(bt_fn, fn_out, radiance_mult, radiance_add, k1, k2)"
@@ -829,19 +548,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up file paths\n",
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200820_20200905_01_T1/')\n",
     "bt_fn = os.path.join(data_in, 'LC08_L1TP_041036_20200820_20200905_01_T1_B10.TIF')\n",
-    "fn_out = os.path.join('./data/', 'TB_20200820.tif')"
+    "fn_out = os.path.join('./data/', 'BT_20200820.tif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +748,7 @@
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200820_20200905_01_T1/')\n",
     "b4 = os.path.join(data_in, 'LC08_L1TP_041036_20200820_20200905_01_T1_B4.TIF')\n",
     "b5 = os.path.join(data_in, 'LC08_L1TP_041036_20200820_20200905_01_T1_B5.TIF')\n",
-    "fn_out = os.path.join('./data/','NDVI_20200414.tif')"
+    "fn_out = os.path.join('./data/','NDVI_20200820.tif')"
    ]
   },
   {
@@ -1193,13 +912,13 @@
     "ndvi_summer = zonal(rst_in, polys_in, 'mean')\n",
     "ndvi_summer.rename(columns = {'mean' : 'NDVI_SUMMER'}, inplace = True)\n",
     "\n",
-    "rst_in = os.path.join('./data/', 'BrightTemp_20200414.tif')\n",
+    "rst_in = os.path.join('./data/', 'BT_20200414.tif')\n",
     "temp_spring = zonal(rst_in, polys_in, 'mean')\n",
     "temp_spring.rename(columns = {'mean' : 'TEMP_SPRING'}, inplace = True)\n",
     "\n",
-    "rst_in = os.path.join('./data/', 'BrightTemp_20200820.tif')\n",
+    "rst_in = os.path.join('./data/', 'BT_20200820.tif')\n",
     "temp_summer = zonal(rst_in, polys_in, 'mean')\n",
-    "temp_summer.rename(columns = {'mean' : 'TEMP_SUMMER'}, inplace = True)\n"
+    "temp_summer.rename(columns = {'mean' : 'TEMP_SUMMER'}, inplace = True)"
    ]
   },
   {
