--- a/materials/Day2/GPHY-491-591-Lab1.ipynb
+++ b/materials/Day2/GPHY-491-591-Lab1.ipynb
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a nested for loop that prints weight divided by eight "
+    "# Write a for loop that prints weight divided by eight "
    ]
   },
   {
@@ -208,16 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f881172b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use list comprehention to add '.csv' to each name in your name list to make a new list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "225ef0ff",
    "metadata": {},
    "outputs": [],
@@ -226,6 +216,16 @@
     "\n",
     "new_list = [x + str(y) for x, y in zip(l1,l2)] # hint your code will look something like this \n",
     "new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12e33c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use list comprehention to add '.csv' to each name in your name list to make a new list"
    ]
   },
   {
