key added, lab cleaned

--- a/materials/Day3/GPHY-491-591-Lab2.ipynb
+++ b/materials/Day3/GPHY-491-591-Lab2.ipynb
@@ -317,17 +317,8 @@
    "outputs": [],
    "source": [
     "# Make a new column that is the ratio of agLabor to agLand\n",
-    "df_.loc[:, 'agLabor-to-foodExport'] = df_['agLabor'] / df_['foodExport']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e21c93d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "describe()"
+    "df_c = df_.copy()\n",
+    "df_c.loc[:, 'agLabor-to-foodExport'] = df_c['agLabor'] / df_c['foodExport']"
    ]
   },
   {
@@ -335,7 +326,7 @@
    "id": "8a28df7b",
    "metadata": {},
    "source": [
-    "Notice `.loc` removes the warning. You are now doing proper indexing under the latest version of Pandas."
+    "Notice `.copy()` removes the warning. You are now doing proper indexing under the latest version of Pandas by creating a new copy of the Senegal data."
    ]
   },
   {
@@ -387,7 +378,7 @@
    "id": "83f019da",
    "metadata": {},
    "source": [
-    "Across all years, what is the correlation between gdp ppp and stunting for surveys conducted after 2000? <br> Hint - you can subset your DataFrame by year with `df[df[year > 2000]`"
+    "Across all years, what is the correlation between gdp ppp and stunting for surveys conducted after 2000? <br> Hint - you can subset your DataFrame by year with  `df[df['year'] > 2000]`"
    ]
   },
   {
@@ -531,7 +522,7 @@
    "id": "710eac53",
    "metadata": {},
    "source": [
-    "### Question 1: Which variables are most highly correlated: GPD PPP, UrbanPop, AgLabor, All Stunting, Rural Stunting, and Urban Stunting? What about  Provide evidence to support your conclusions."
+    "### Question 1: Which variables are most highly correlated: GPD PPP, UrbanPop, AgLabor, All Stunting, Rural Stunting, and Urban Stunting? Provide evidence to support your conclusions."
    ]
   },
   {
@@ -539,39 +530,8 @@
    "id": "4d96bd6c",
    "metadata": {},
    "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d367f447",
-   "metadata": {},
-   "source": [
-    "### Question 2: Which variables are most highly correlated: GPD PPP, UrbanPop, AgLabor, All Wasting, Rural Wasting, and Urban Wasting? What about  Provide evidence to support your conclusions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f7f1701",
-   "metadata": {},
-   "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2dae448",
-   "metadata": {},
-   "source": [
-    "### Question 3: Which variables are most highly correlated: GPD PPP, UrbanPop, AgLabor, All Stunting, Rural Stunting, and Urban Stunting? What about  Provide evidence to support your conclusions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e53068d",
-   "metadata": {},
-   "source": [
-    "Answer: "
+    "Answer 1: <br>\n",
+    "xyz ..."
    ]
   }
  ],
