--- a/materials/Day5/GPHY-491-591-Lab3.ipynb
+++ b/materials/Day5/GPHY-491-591-Lab3.ipynb
@@ -1081,11 +1081,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Set up file paths\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m data_in \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlandsat/Level1/LC08_L1TP_041036_20200414_20200423_01_T1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m b4 \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_in, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLC08_L1TP_041036_20200414_20200423_01_T1_B4.TIF\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m b5 \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_in, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLC08_L1TP_041036_20200414_20200423_01_T1_B5.TIF\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Set up file paths\n",
     "data_in = os.path.join(file_path, 'landsat/Level1/LC08_L1TP_041036_20200414_20200423_01_T1')\n",
