osm tutorial done

--- a/materials/Day6/061_census_data.ipynb
+++ b/materials/Day6/061_census_data.ipynb
@@ -5,7 +5,7 @@
    "id": "ff079275",
    "metadata": {},
    "source": [
-    "# Session 6-1: Human Population Data\n",
+    "# Session 6-1: Human Population Data - US Census\n",
     "\n",
     "![ntl](./assets/humans.jpg)\n",
     "\n",
@@ -13,7 +13,7 @@
     "\n",
     "Human population data is very powerful. In the US, **\\$2.8 Trillion** is distributed based on Census data. That's a lot of money. Human data can also be used in nefarious ways too. Governments can rig elections by stuffing districts and governments can oppress groups if they can count them. The power of This is all to say, that while human data is really important for sustainability, there are true ethical considerations when developing and using human datasets.  \n",
     "\n",
-    "In this session, we will become familiar with a few human population datasets, including the US Census and gridded population datasets. In doing so, we will learn what [application programming interface (API)](https://en.wikipedia.org/wiki/API) is a\n",
+    "In this session, we will become familiar with a few human population datasets, specifically the US Census. In doing so, we will learn about [application programming interfaces (APIs)](https://en.wikipedia.org/wiki/API).\n",
     "\n",
     "<p style=\"height:1pt\"> </p>\n",
     "\n",
@@ -23,20 +23,13 @@
     "\n",
     "<div class=\"boxtext2\">\n",
     "<ul class=\"a\">\n",
-    "    <li> 📌 Introduction to <span class=\"codeb\">GeoPandas</span> </li>\n",
+    "    <li> 📌 Introduction to <span class=\"codeb\">US Census Data</span> </li>\n",
     "    <ul class=\"b\">\n",
-    "        <li> Anatomy of a Geometry </li>\n",
-    "        <li> Importing Shape Files </li>\n",
-    "        <li> Concatenating and Merging Data </li>\n",
-    "        <li> Coordinate reference systems and projections </li>\n",
+    "        <li> Census API </li>\n",
+    "        <li> Merging with shapefiles </li>\n",
+    "        <li> Plotting Data </li>\n",
+    "        <li> Area Aggregation </li>\n",
     "    </ul>\n",
-    "    <li> 📌 Introduction to <span class=\"codeb\">Rasterio</span> </li>\n",
-    "    <ul class=\"b\">\n",
-    "        <li> Reading raster files </li>\n",
-    "        <li> Raster meta data </li>\n",
-    "        <li> Rasters as 2-d arrays </li>   \n",
-    "        <li> Rasters math </li>   \n",
-    "</ul>\n",
     "</div>\n",
     "\n",
     "<hr style=\"border-top: 0.2px solid gray; margin-top: 12pt; margin-bottom: 0pt\"></hr>\n",
@@ -298,7 +291,7 @@
     "\n",
     "Notice that the census data does not have any geographic information ascribed to it. We'll need to read in data directly from the Census's database of boundaries. `GeoPandas` can do this directly from the internet if the data is set up correctly. <br>\n",
     "\n",
-    "Note that I had to dive into the the (Census Tiger Product Guide)[https://www.census.gov/programs-surveys/geography/guidance/tiger-data-products-guide.html] to make sense of the Census shapefiles that are online, again because they use a alphanumeric coding, not common place names."
+    "Note that I had to dive into the the [Census Tiger Product Guide](https://www.census.gov/programs-surveys/geography/guidance/tiger-data-products-guide.html) to make sense of the Census shapefiles that are online, again because they use a alphanumeric coding, not common place names."
    ]
   },
   {
@@ -755,7 +748,6 @@
    "execution_count": 10,
    "id": "23cefc44-d420-412d-8017-7af3e3df9001",
    "metadata": {
-    "scrolled": false,
     "tags": []
    },
    "outputs": [
@@ -822,7 +814,6 @@
    "execution_count": 11,
    "id": "75e6ab11-1a1e-4974-874a-641a9b8ae838",
    "metadata": {
-    "scrolled": false,
     "tags": []
    },
    "outputs": [
@@ -1228,9 +1219,7 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "24e64751",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1523,7 +1512,6 @@
    "execution_count": 37,
    "id": "d8745770-e13f-42ca-b05d-46d4ce8a5d2d",
    "metadata": {
-    "scrolled": false,
     "tags": []
    },
    "outputs": [
@@ -1599,7 +1587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
